# vanish

./: .gitignore  INSTALL.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: API.md  ARCHITECTURE.md  CLI.md  PERFORMANCE.md  PROJECT_SUMMARY.md  QUICKSTART.md
examples/: basic_usage.py  cli_examples.sh
src/vanish/: __init__.py  cli.py  config.py  pipeline.py  worker.py
src/vanish/modules/: __init__.py  audio_input.py  post_processor.py  quality_assessor.py  source_separator.py  voice_enhancer.py
src/vanish/utils/: __init__.py  logging.py
tests/: __init__.py  test_audio_input.py  test_config.py
